# wordpieces

./: .gitignore  COPYRIGHT.md  Cargo.toml  README.md  shell.nix
.github/workflows/: rust.yml
src/: automaton.rs  error.rs  lib.rs  word_pieces.rs
testdata/: test.pieces
