[package]
name = "wordpieces"
version = "0.5.0"
authors = ["Daniël de Kok <me@danieldk.eu>", "Tobias Pütz <tobias.puetz@uni-tuebingen.de"]
description = "Split tokens into word pieces"
keywords = ["wordpiece", "word", "piece", "tokenization"]
homepage = "https://github.com/danieldk/wordpieces"
edition = "2018"
license = "MIT OR Apache-2.0"

exclude = [
  ".gitignore",
  ".github",
  "shell.nix",
  "nix/*"
]

[dependencies]
fst = "0.4"
thiserror = "1"

[dev-dependencies]
quickcheck = "1.0"
